codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_resume_error.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  Unable to resume session
  The session is unavailable.

❯ 1. Return to command center

  Press enter to confirm or esc to go back
