codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_worktree_grouping.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: grouping
---
  Agent command center
  0 need input   0 working   4 ready
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/worktree-root/primary/  2
  › ○ Task  Ready
    ○ Task  Ready

  /tmp/worktree-root/primary/subdir/child  1
    ○ Task  Ready

  /tmp/worktree-root/primary/subdir/child  1
    ○ Task  Ready







  New task
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯ Describe a new task
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   enter create task    ctrl+j newline    esc tasks    → open task
